finished: merge 3 field when accept 11 players stadium, booked history of user, fix bug accept 11 players stadium when stadium left < 1

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -39,7 +39,7 @@
               <a href="#" class="dropdown-item" type="button">Sân bóng của tôi</a>
               <a href="#" class="dropdown-item" type="button">Trạng thái đặt sân</a>
               {% else %}
-              <a href="#" class="dropdown-item" type="button">Lịch sử đặt sân</a>
+              <a href="{% url 'history_booked' user.id %}" class="dropdown-item" type="button">Lịch sử đặt sân</a>
               {% endif %}
               <a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a>
             </div>
