--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -105,6 +105,7 @@
                                     {% endfor %}
                                 </div>
                             </div>
+                            <a class="view-all-stadium" href="">Xem tất cả...</a>
                             <hr>
                         {% endfor %}
                     </div>
